Answers changed
