# internal/pkg/controllers/auth.go
@@ -14,14 +14,14 @@ import (
 // @description This method checks whether user is signed in or signed out
 // @tags auth
 // @produce json
-// @success 200 {object} models.AnswerMessage
-// @failure 401 {object} models.AnswerMessage
+// @success 200 {object} models.MessageAnswer
+// @failure 401 {object} models.MessageAnswer
 // @router /session [get]
 func IsAuth(w http.ResponseWriter, r *http.Request) {
 	if isAuth(r) {
-		models.SendMessage(w, http.StatusOK, "signed in")
+		models.Send(w, http.StatusOK, models.SignedInAnswer)
 	} else {
-		models.SendMessage(w, http.StatusUnauthorized, "signed out")
+		models.Send(w, http.StatusUnauthorized, models.SignedOutAnswer)
 	}
 }
 
@@ -33,21 +33,21 @@ func IsAuth(w http.ResponseWriter, r *http.Request) {
 // @accept json
 // @produce json
 // @param credentials body models.SignInData true "Credentials"
-// @success 200 {object} models.AnswerMessage
-// @failure 400 {object} models.AnswerMessageWithFields
-// @failure 405 {object} models.AnswerMessage
-// @failure 500 {object} models.AnswerMessage
+// @success 200 {object} models.MessageAnswer
+// @failure 400 {object} models.IncorrectFieldsAnswer
+// @failure 405 {object} models.MessageAnswer
+// @failure 500 {object} models.MessageAnswer
 // @router /session [post]
 func SignIn(w http.ResponseWriter, r *http.Request) {
 	if isAuth(r) {
-		models.SendMessage(w, http.StatusMethodNotAllowed, "already signed in")
+		models.Send(w, http.StatusMethodNotAllowed, models.AlreadySignedInAnswer)
 		return
 	}
 
 	signInData := models.SignInData{}
 	err := json.NewDecoder(r.Body).Decode(&signInData)
 	if err != nil {
-		models.SendMessage(w, http.StatusInternalServerError, "incorrect JSON")
+		models.Send(w, http.StatusInternalServerError, models.IncorrectJsonAnswer)
 		return
 	}
 	defer r.Body.Close()
@@ -55,15 +55,15 @@ func SignIn(w http.ResponseWriter, r *http.Request) {
 	jwtData, err, fields := auth.SignIn(signInData)
 	if err != nil {
 		if fields != nil {
-			models.SendMessageWithFields(w, http.StatusBadRequest, err.Error(), fields)
+			models.Send(w, http.StatusBadRequest, models.NewIncorrectFieldsAnswer(fields))
 			return
 		}
-		models.SendMessage(w, http.StatusInternalServerError, err.Error())
+		models.Send(w, http.StatusInternalServerError, models.MessageAnswer{Status: 500, Message: err.Error()})
 		return
 	}
 
 	http.SetCookie(w, auth.CreateAuthCookie(jwtData, 30*24*time.Hour))
-	models.SendMessage(w, http.StatusOK, "signed in")
+	models.Send(w, http.StatusOK, models.SignedInAnswer)
 }
 
 // SignOut godoc
@@ -72,19 +72,19 @@ func SignIn(w http.ResponseWriter, r *http.Request) {
 // @description This method logs user out and deletes cookie
 // @tags auth
 // @produce json
-// @success 200 {object} models.AnswerMessage
-// @failure 405 {object} models.AnswerMessage
+// @success 200 {object} models.MessageAnswer
+// @failure 405 {object} models.MessageAnswer
 // @router /session [delete]
 func SignOut(w http.ResponseWriter, r *http.Request) {
 	if !isAuth(r) {
-		models.SendMessage(w, http.StatusMethodNotAllowed, "already signed out")
+		models.Send(w, http.StatusMethodNotAllowed, models.AlreadySignedOutAnswer)
 		return
 	}
 
 	jwtCookie, _ := r.Cookie(auth.CookieName)
 	jwtCookie.Expires = time.Unix(0, 0)
 	http.SetCookie(w, jwtCookie)
-	models.SendMessage(w, http.StatusOK, "signed out")
+	models.Send(w, http.StatusOK, models.SignedOutAnswer)
 }
 
 // UpdatePassword godoc
@@ -95,21 +95,21 @@ func SignOut(w http.ResponseWriter, r *http.Request) {
 // @accepts json
 // @produce json
 // @param update_data body models.UpdatePasswordData true "New password info"
-// @success 200 {object} models.AnswerMessage
-// @failure 400 {object} models.AnswerMessageWithFields
-// @failure 401 {object} models.AnswerMessage
-// @failure 500 {object} models.AnswerMessage
+// @success 200 {object} models.MessageAnswer
+// @failure 400 {object} models.IncorrectFieldsAnswer
+// @failure 401 {object} models.MessageAnswer
+// @failure 500 {object} models.MessageAnswer
 // @router /password [put]
 func UpdatePassword(w http.ResponseWriter, r *http.Request) {
 	if !isAuth(r) {
-		models.SendMessage(w, http.StatusUnauthorized, "not signed in")
+		models.Send(w, http.StatusUnauthorized, models.NotSignedInAnswer)
 		return
 	}
 
 	updateData := models.UpdatePasswordData{}
 	err := json.NewDecoder(r.Body).Decode(&updateData)
 	if err != nil {
-		models.SendMessage(w, http.StatusInternalServerError, "incorrect JSON")
+		models.Send(w, http.StatusInternalServerError, models.IncorrectJsonAnswer)
 		return
 	}
 	defer r.Body.Close()
@@ -117,12 +117,12 @@ func UpdatePassword(w http.ResponseWriter, r *http.Request) {
 	err, fields := auth.UpdatePassword(jwtData(r).Id, updateData)
 	if err != nil {
 		if fields != nil {
-			models.SendMessageWithFields(w, http.StatusBadRequest, err.Error(), fields)
+			models.Send(w, http.StatusBadRequest, models.NewIncorrectFieldsAnswer(fields))
 			return
 		}
-		models.SendMessage(w, http.StatusInternalServerError, err.Error())
+		models.Send(w, http.StatusInternalServerError, models.MessageAnswer{Status: 500, Message: err.Error()})
 		return
 	}
 
-	models.SendMessage(w, http.StatusOK, "password updated")
+	models.Send(w, http.StatusOK, models.PasswordUpdatedAnswer)
 }
